# faim-wako-searchfirst

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  REUSE.toml  config.yml  config_apoc.yml  config_cellpose.yml  config_preprocess_fiji.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
faim_wako_searchfirst/: __about__.py  __init__.py  single.py
scripts/: SearchFirst_Trainable_Classifier.ijm  Visualize_Sampling.groovy  searchfirst.py  simple_segmentation.py
src/faim_wako_searchfirst/: __init__.py  filter.py  main.py  preprocess.py  sample.py  segment.py  single.py
tests/: __init__.py  test_apoc_classifier.py  test_cellpose.py  test_filter.py  test_main.py  test_preprocess_fiji.py  test_sample.py  test_segment.py  test_segmentation.py  test_weka_classifier.py
tests/resources/: PixelClassifier.cl  apply_weka_classifier.groovy  classifier.model  classifier.model.license  simple_labels.tif
tests/resources/TestSet/: Other_name_D07_T0001F002L01A02Z01C01.tif  TestSet_C03_T0001F002L01A03Z01C03.tif  TestSet_D07_T0001F002L01A03Z01C03.tif  TestSet_D07_T0001F002L01A03Z01C03.tif.license
tests/resources/worms/: worms_C01.tif
