# SPDX-FileCopyrightText: 2023 Friedrich Miescher Institute for Biomedical Research (FMI), Basel (Switzerland)
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "faim-wako-searchfirst"
description = "Python package for SearchFirst acquisitions with Wako Automation Suite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Jan Eglinger", email = "jan.eglinger@fmi.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cellpose<4",
  "confuse",
  "numpy",
  "scipy",
  "scikit-image",
  "tifffile",
  "tqdm",
  "typer"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/fmi-faim/faim-wako-searchfirst#readme"
Issues = "https://github.com/fmi-faim/faim-wako-searchfirst/issues"
Source = "https://github.com/fmi-faim/faim-wako-searchfirst"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
select = ['A', 'B', 'C', 'D', 'E', 'F', 'I']
target-version = 'py310'

[tool.pixi.environments]
default = { solve-group = "py312" }
py310 = { features = ["py310", "test"], solve-group = "py310" }
py311 = { features = ["py311", "test"], solve-group = "py311" }
py312 = { features = ["py312", "test"], solve-group = "py312" }
py313 = { features = ["py313", "test"], solve-group = "py313" }

[tool.pixi.feature.test.dependencies]
pandas = ">=2.2.3,<3"
pytest = ">=8.3.5,<9"
pytest-cov = ">=6.1.1,<7"

[tool.pixi.feature.test.tasks]
test = "pytest --cov=src --cov-report term-missing"
cov-xml = "pytest --cov=src --cov-report xml"

[tool.pixi.feature.py310.dependencies]
python = "==3.10"

[tool.pixi.feature.py311.dependencies]
python = "==3.11"

[tool.pixi.feature.py312.dependencies]
python = "==3.12"

[tool.pixi.feature.py313.dependencies]
python = "==3.13"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
faim-wako-searchfirst = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scikit-image = ">=0.25.2,<0.26"
confuse = ">=2.0.1,<3"
numpy = ">=2.2.5,<3"
scipy = ">=1.15.2,<2"
tifffile = ">=2024.12.12,<2026"
tqdm = ">=4.67.1,<5"
typer = ">=0.15.3,<0.16"
pytorch = ">=2.7.0,<3"
